--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=always
 
 server.port=8081
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs/swagger-ui
