--- a/ticket/src/main/resources/application.properties
+++ b/ticket/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=always
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs/swagger-ui
